# shortwave

./: .gitignore  CMakeLists.txt  CRUSH.md  README.md  crush.json  flake.nix  icon.aseprite  installer.nsi  main.cpp  qr.h  shortwave.rc
.cache/clangd/index/: main.cpp.47C66B394CD74271.idx  qr.h.B46974D52593BF02.idx
